subprojects/swen430/src/test/resources/tests/valid/Print_Valid_11.while
void main() {
    print "foo"[1];
}
