subprojects/swen430/src/test/resources/tests/invalid/Break_Invalid_5.while
string foo(int x) {
    if (true) {
        break;
    } else {
        return "bar";
    }
}

void main() {
    print foo(1);
}

